added form for sending image

--- a/taskmaster-fe/package.json
+++ b/taskmaster-fe/package.json
@@ -12,6 +12,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "aws s3 sync build/ s3://rjbrons-taskmaster-fe --acl public-read",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
